<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_20dp">

    <ImageView
        android:id="@+id/iv_thumbnail_customer"
        android:layout_width="@dimen/_46dp"
        android:layout_height="@dimen/_46dp"
        android:background="@drawable/ic_customer"
        android:contentDescription="@string/thumbnail_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_customer_picker_ten_khach_hang"
        style="@style/text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10dp"
        android:text="@string/nguyen_thanh_tu"
        app:layout_constraintStart_toEndOf="@+id/iv_thumbnail_customer"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_item_customer_picker_so_dien_thoai"
        style="@style/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5dp"
        android:text="@string/_0920912342"
        app:layout_constraintBottom_toBottomOf="@+id/lb_sdt"
        app:layout_constraintStart_toEndOf="@+id/lb_sdt"
        app:layout_constraintTop_toTopOf="@+id/lb_sdt" />

    <TextView
        android:id="@+id/lb_dc"
        style="@style/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dia_chi"
        app:layout_constraintStart_toStartOf="@+id/tv_item_customer_picker_ten_khach_hang"
        app:layout_constraintTop_toBottomOf="@+id/lb_sdt" />


    <TextView
        android:id="@+id/lb_sdt"
        style="@style/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/so_dien_thoai"
        app:layout_constraintStart_toStartOf="@+id/tv_item_customer_picker_ten_khach_hang"
        app:layout_constraintTop_toBottomOf="@id/tv_item_customer_picker_ten_khach_hang" />

    <TextView
        android:id="@+id/tv_item_customer_picker_dia_chi"
        style="@style/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5dp"
        android:text="@string/thu_duc_tp_hcm"
        app:layout_constraintBottom_toBottomOf="@+id/lb_dc"
        app:layout_constraintStart_toEndOf="@+id/lb_dc"
        app:layout_constraintTop_toTopOf="@+id/lb_dc" />

</androidx.constraintlayout.widget.ConstraintLayout>