<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerFormActivity"
    android:orientation="vertical">
    <ImageView
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:id="@+id/avatar"/>
    <Button
        android:id="@+id/buttonLoadPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tải ảnh lên"
        android:onClick="onLoadPicture"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/maKH"
        android:id="@+id/maKH"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tenKH"
        android:id="@+id/tenKH"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/diaChi"
        android:id="@+id/diaChi"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/soDT"
        android:id="@+id/soDT"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnInsert"
        android:text="Thêm"
        android:onClick="onClickInsertOrUpdate"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDelete"
        android:text="Xóa"
        android:onClick="onClickDelete"/>

</LinearLayout>