<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10dp"
    tools:context=".ui.product.SanPhamView">

    <ImageView
        android:id="@+id/spImg"
        android:layout_width="@dimen/_46dp"
        android:layout_height="@dimen/_46dp"
        android:background="@drawable/ic_tv_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/thumbnail_product" />

    <TextView
        android:id="@+id/tenSP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10dp"
        android:text="@string/tenSP"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/spImg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/xuatXu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xuatXu"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tenSP"
        app:layout_constraintTop_toBottomOf="@id/tenSP" />

    <TextView
        android:id="@+id/gia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gia"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tenSP"
        app:layout_constraintTop_toBottomOf="@+id/xuatXu" />

</androidx.constraintlayout.widget.ConstraintLayout>