<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_20dp">

    <ImageView
        android:id="@+id/iv_thumbnail_product"
        android:layout_width="@dimen/_46dp"
        android:layout_height="@dimen/_46dp"
        android:background="@drawable/ic_product"
        android:contentDescription="@string/thumbnail_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageSwitcher
        android:id="@+id/iv_add_to_order"
        android:layout_width="@dimen/_24dp"
        android:layout_height="@dimen/_24dp"
        android:background="@drawable/ic_add"
        android:contentDescription="@string/thumbnail_product"
        app:layout_constraintBottom_toBottomOf="@+id/iv_thumbnail_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_thumbnail_product" />

    <TextView
        android:id="@+id/tv_item_product_adder_ten_san_pham"
        style="@style/text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10dp"
        android:text="@string/tv_samsung_4K"
        app:layout_constraintStart_toEndOf="@+id/iv_thumbnail_product"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_item_product_adder_don_gia"
        style="@style/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_000_000"
        app:layout_constraintStart_toStartOf="@+id/tv_item_product_adder_ten_san_pham"
        app:layout_constraintTop_toBottomOf="@id/tv_item_product_adder_ten_san_pham" />

    <TextView
        android:id="@+id/lb_unit"
        style="@style/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5dp"
        android:text="@string/vnd"
        app:layout_constraintBottom_toBottomOf="@+id/tv_item_product_adder_don_gia"
        app:layout_constraintStart_toEndOf="@+id/tv_item_product_adder_don_gia"
        app:layout_constraintTop_toTopOf="@+id/tv_item_product_adder_don_gia" />

</androidx.constraintlayout.widget.ConstraintLayout>