<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.product.FormSanPham">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        tools:layout_editor_absoluteX="-9dp">

        <EditText
            android:id="@+id/tenSP"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/tenSP"
            android:maxLines="1" />

        <EditText
            android:id="@+id/gia"

            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/gia"
            android:inputType="numberSigned|number"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xuatXu"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/xuatXu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_border"
                android:overlapAnchor="false"
                android:popupBackground="@drawable/spinner_outline_bg"
                android:spinnerMode="dropdown"
                tools:listitem="@layout/activity_country_view" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnInsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="128dp"
                android:text="Thêm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="128dp"
                android:background="#000000"
                android:backgroundTint="#DF6868"
                android:text="Xóa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnInsert"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>